src/objects/Payout_Product__c.object
<CustomObject>
    <fields>
        <fullName>Material__c</fullName>
        <formula>Products_China__r.Material__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Material#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payouts__c</fullName>
        <label>Payouts</label>
        <referenceTo>Payouts__c</referenceTo>
        <relationshipLabel>Payout Products</relationshipLabel>
        <relationshipName>Payout_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product1__c</fullName>
        <formula>Products_China__r.Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line_Chinese__c</fullName>
        <formula>Products_China__r.Product_Line_Chinese__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line(Chinese)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line_English__c</fullName>
        <formula>Products_China__r.Product_Line_English__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line(English)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name_Chinese__c</fullName>
        <formula>Products_China__r.Product_Name_Chinese__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name(Chinese)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name_English__c</fullName>
        <formula>Products_China__r.Product_Name_English__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name(English)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products_China__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product</label>
        <referenceTo>Products_China__c</referenceTo>
        <relationshipLabel>Product</relationshipLabel>
        <relationshipName>Payout_Products</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retail_Price__c</fullName>
        <formula>Products_China__r.Retail_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sheen_Chinese__c</fullName>
        <formula>Products_China__r.Sheen_Chinese__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sheen(Chinese)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sheen_English__c</fullName>
        <formula>Products_China__r.Sheen_English__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sheen(English)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <formula>Products_China__r.Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Gallons__c</fullName>
        <formula>Size__c  *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Gallons</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Payout__c</fullName>
        <formula>Quantity__c  *  Products_China__r.Retail_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Payout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Payout Product</label>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Payout Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payout Products</pluralLabel>
    <recordTypes>
        <fullName>China_Payout_Products</fullName>
        <active>true</active>
        <description>This record type is visible only for China profiles.</description>
        <label>China Payout Products</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>